# rnm

./: .gitignore  README.md
calibration/: CMakeLists.txt  package.xml
calibration/msg/: imagepair.msg
calibration/src/: LoadFromFolder.cpp  OCVcalib3d.hpp  OCVcalibration_handeye.cpp  calibrate_from_folder.cpp  calibrate_from_folder_2.cpp  calibration.cpp  calibration_from_folder_node.cpp  calibration_node.cpp  camera_calibration.cpp  cv_handeye.cpp  cv_handeye.h  get_frame_node.cpp  get_images.cpp  get_images_check.cpp  hand_eye_calibration.cpp  imagehandler.cpp  imagehandler.h  imageprocessor.cpp  imageprocessor.h  joint_states.txt  loadFromFolder.cpp  load_from_folder.cpp  process_images.cpp  write_images.cpp
calibration/srv/: handEyeCalibration.srv
camera_calibration/: CMakeLists.txt  camera_calibration.cpp  main.cpp
forward_kin/: CMakeLists.txt  package.xml
forward_kin/src/: forward_kin_continuous.cpp  forward_kin_node.cpp  forward_kinematics.cpp  forward_kinematics.h
forward_kin/srv/: get_endeffector.srv
frame_reader/src/: main.cpp
franka_control/config/: franka_control_node.yaml
franka_example_controllers/: CMakeLists.txt
franka_example_controllers/include/franka_example_controllers/: joint_position_example_controller.h  joint_position_example_controller_sim.h
franka_example_controllers/launch/: demo_test_move.launch
franka_example_controllers/src/: Trajectory.cpp  inverse_kinematics_test_move_node.cpp  joint_position_example_controller.cpp  joint_position_example_controller_sim.cpp  needle_insertion.cpp  test_move.cpp  trajectory_test_node.cpp
franka_example_controllers/srv/: needle_insertion_service.srv
franka_gripper/src/: franka_gripper.cpp
franka_visualization/: CMakeLists.txt
general/: convert.h
inverse_kinematics/: CMakeLists.txt  package.xml
inverse_kinematics/src/: convert.h  inverse_kinematics_node.cpp  inverse_kinematics_tutorial_example_node.cpp  jacobian.cpp  jacobian.h
inverse_kinematics/srv/: unserService.srv
panda_joint_reader/: CMakeLists.txt  package.xml
panda_joint_reader/src/: panda_joint_reader_node.cpp
path_planning/: CMakeLists.txt  package.xml
path_planning/launch/: plan_path.launch
path_planning/src/: Trajectory.cpp  Trajectory.h  move_to_point.cpp  plan_path_node.cpp  rrt.cpp  rrt.h  rrt_node.cpp  rrt_node.h  spline.h  utility.cpp  utility.h
point_cloud_registration/: CMakeLists.txt  package.xml
point_cloud_registration/launch/: point_cloud_registration.launch
point_cloud_registration/msg/: PCJScombined.msg  registrationResults.msg
point_cloud_registration/src/: ApproximateTimeSynchronizer.cpp  PCMatrixTransform.cpp  PCStitch.cpp  PC_stitching_node.cpp  PointCloudRecording.cpp  RegistrationServiceTest.cpp  STLRegistration.cpp  STLRegistration2.cpp  STLRegistration_node.cpp  STLconversion_node.cpp  Scanner.cpp  Scanner_node.cpp  Synchronizer_node.cpp  VoxelGridFilter.cpp  joint_states_publisher.cpp  pose_reader_node.cpp  skeleton_splitter.cpp
point_cloud_registration/srv/: alignment_service.srv  registration_results_service.srv
trajectory/: CMakeLists.txt  package.xml
trajectory/launch/: trajectory_test.launch
trajectory/src/: trajectory_execution.cpp  trajectory_test.cpp
